--- a/.github/workflows/react-app.yml
+++ b/.github/workflows/react-app.yml
@@ -14,6 +14,6 @@ jobs:
     - name: Build and push to Docker Hub
       uses: docker/build-push-action@v2
       with:
-        context: .a
+        context: .
         push: true
         tags: aletorres00/devops_alex:${{ github.run_number }}
