--- a/.github/workflows/react-app.yml
+++ b/.github/workflows/react-app.yml
@@ -10,7 +10,7 @@ jobs:
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+        password: ${{ secrets.DOCKERHUB_PASSWORD }}
     - name: Build and push to Docker Hub
       uses: docker/build-push-action@v2
       with:
