--- a/.github/workflows/react-app.yml
+++ b/.github/workflows/react-app.yml
@@ -12,7 +12,7 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
     - name: Build and push to Docker Hub
-      uses: docker/build-push-action@v2a
+      uses: docker/build-push-action@v2
       with:
         context: .
         push: true
